--- a/index.html
+++ b/index.html
@@ -186,12 +186,9 @@
   var fireballSpeed;
   var wizardSpeed = 3;
   var wizardWidth = 70;
-  var wizardHeight;
-  var wizardX;
-  var wizardY;
 
   var getWizardHeight = function() {
-    wizardHeight = 1.337 * wizardWidth;
+    var wizardHeight = 1.337 * wizardWidth;
     return wizardHeight;
   };
 
@@ -202,12 +199,12 @@
   };
 
   var getWizardX = function(width) {
-    wizardX = (width/2)-(wizardWidth/2);
+    var wizardX = (width-wizardWidth)/2;
     return wizardX;
   };
 
   var getWizardY = function(height) {
-    wizardY = (height/3)-wizardHeight;
+    var wizardY = (height/3)-(1.337 * wizardWidth);
     return wizardY;
   };
 </script>
