--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   };
 
   var getFireballSpeed = function(left) {
-    fireballSpeed = (left) ? 5 : 2;
+    var fireballSpeed = (left) ? 5 : 2;
 
     return fireballSpeed;
   };
