--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     Вместе с ним вас ждет увлекательное приключение&hellip;
   </p>
 
-  <div class="demo"></div>
+  <div class="demo">
+  </div>
 
   <div class="setup-open">
     <img src="./img/user-1.jpg" class="setup-open-icon">
@@ -181,6 +182,7 @@
   </div>
 </template>
 
+<script src="js/stat.js"></script>
 <script>
   var fireballSize = 22;
   var wizardSpeed = 3;
