--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 </header>
 
 <div class="overlay setup hidden">
-  <form class="setup-wizard-form"
-        method="post"
+  <form action="https://js.dump.academy/code-and-magick"
+        class="setup-wizard-form"
+        method="get"
         enctype="multipart/form-data"
         autocomplete="off">
 
@@ -82,6 +83,7 @@
         </div>
         <label>
           <input type="text" name="username"
+                 minlength="2"
                  maxlength="25" required
                  class="setup-user-name" value="Синий Пендальф"/>
         </label>
